[gd_scene load_steps=2 format=3 uid="uid://l4acdcn3n761"]

[ext_resource type="Script" uid="uid://yphcdwkqpfa8" path="res://interface/control.gd" id="1_f0it3"]

[node name="Control" type="Control" node_paths=PackedStringArray("_node_tree", "_name_edit")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f0it3")
_node_tree = NodePath("VBoxContainer/Tree")
_name_edit = NodePath("VBoxContainer/HBoxContainer/Name")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Tree" type="Tree" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
column_titles_visible = true
hide_root = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Name" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
placeholder_text = "Self Name"

[node name="LastSeen" type="Timer" parent="."]
autostart = true

[connection signal="item_edited" from="VBoxContainer/Tree" to="." method="_on_tree_item_edited"]
[connection signal="text_submitted" from="VBoxContainer/HBoxContainer/Name" to="." method="_on_name_text_submitted"]
[connection signal="timeout" from="LastSeen" to="." method="_on_last_seen_timeout"]
